<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnHead"
        android:layout_width="210dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/cookie"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/count"
        android:layout_width="333dp"
        android:layout_height="111dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="119dp"
        android:text="0"
        android:textAlignment="center"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpgrate"
        android:layout_width="63dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnHead"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnUpgrate2"
        android:layout_width="63dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />



    <LinearLayout
        android:id="@+id/layoutUpgrate"
        android:layout_width="340dp"
        android:layout_height="587dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="14dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textToaster"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/_toaster"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1"
            tools:layout_editor_absoluteY="87dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:text="Купив новый тостер вы сможете производить на 1 печеньку больше за клик"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnToaust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="109dp" />

        <TextView
            android:id="@+id/toastMan"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="Рабочий"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="1"
            tools:layout_editor_absoluteY="87dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Рабочий будет делать печеньки за вас, но его рабочий день ограничен 8 минутами, но со временем ваш сотрудник будет производить больше печенек, а так же если вы покинете игру то и рабочий убежит с работы"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTostMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/_500"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="109dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Цель игры произвести 1 000 000 печенек"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutEnd"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="219dp"
            android:text="Поздравляю ты набрал 1000000 печенек, а теперь удали эту залупу"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>